Change l'alignement à gauche dans le CSS. L'alignement justifié faisait des bugs d'affichage sur mobile.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -25,7 +25,7 @@ h1.title {
 }
 
 p {
-  text-align: justify;
+  text-align: left;
 }
 
 .book.font-family-0 {
